--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gulp-util": "^3.0.0",
     "mkdirp": "^0.5.0",
     "through2": "^0.6.1",
-    "vulcanize": "https://github.com/rush340/vulcanize.git"
+    "vulcanize": "git+https://github.com/rush340/vulcanize.git"
   },
   "devDependencies": {
     "mocha": "*"
